[tool.poetry]
name = "aula19-bootcamp"
version = "0.1.0"
description = ""
authors = ["Matheus Gentil <matheusvgentil@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
